external-crates/move/crates/move-compiler/tests/move_check/expansion/unpack_assign_other_expr.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/expansion/unpack_assign_other_expr.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/unpack_assign_other_expr.move:9:11
  │
9 │         S f = S { f: 0 };
  │           ^
  │           │
  │           Unexpected 'f'
  │           Expected ';'

